# knowledge-context-protocol

./: .gitignore  ADOPTERS.md  CATALOG-SPEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IANA-REGISTRATION.md  PLAN-0.9.0.md  PROPOSAL.md  README.md  RFC-0001-KCP-Extended.md  RFC-0002-Auth-and-Delegation.md  RFC-0003-Federation.md  RFC-0004-Trust-and-Compliance.md  RFC-0005-Payment-and-Rate-Limits.md  RFC-0006-Context-Window-Hints.md  RFC-0007-Query-Vocabulary.md  RFC-0008-Agent-Readiness.md  RFC-0009-Visibility-and-Authority.md  RFC-0010-Bi-Temporal-Unit-Validity.md  RFC-0011-Org-Federation.md  RFC-0012-Capability-Discovery-Provenance.md  RFC-0013-Cartridge-Catalog-Distribution.md  RFC-0014-Manifest-Composition.md  RFC-0015-Negative-Space-Declarations.md  RFC-0016-Content-Structure-Declaration.md  RFC-0017-Observability-Hooks.md  SPEC.md  knowledge.yaml
bridge/python/: .synthesis.md  README.md  pyproject.toml
bridge/python/kcp_mcp/: __init__.py  __main__.py  content.py  mapper.py  server.py
bridge/python/tests/: test_mapper.py  test_server.py
bridge/python/tests/fixtures/full/: .synthesis.md  GUIDE.md  README.md  knowledge.yaml
bridge/python/tests/fixtures/minimal/: .synthesis.md
bridge/python/tests/fixtures/rfc007/: README.md  knowledge.yaml
bridge/python/tests/fixtures/sub/: unit-a.md
cli/: package-lock.json  package.json
docs/: PARITY.md  (+6 more)
parsers/python/: README.md  pyproject.toml
parsers/python/kcp/: __init__.py  __main__.py  init.py  model.py  parser.py  reflect.py  validator.py
parsers/python/tests/: test_init.py  test_kcp.py  test_reflect.py
(+374 files in other folders)
